cmake_minimum_required(VERSION 3.30)
project(Arreglos C)

set(CMAKE_C_STANDARD 17)

add_executable(Arreglos main.c)
add_executable(Asignacion Ejercicio_Asignacion.c)
add_executable(Asignacion_2 Ejercicio2_Asignacion.c)
add_executable(Ejercicio_1 Arrreglos_Ejercicio1.c)
add_executable(Ejercicio_2 Arrreglos_Ejercicio2.c)
add_executable(Ejercicio_3 Arreglos_Ejercicio3.c)


